apps/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: apps
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/instance: backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: backend
    app.kubernetes.io/instance: backend
