apps/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: apps
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/instance: backend
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 8000
